# Async_Sqlx_example

./: Cargo.toml  README.md
migrations/: 0000_init.sql  0001_init_todo.sql
src/: lib.rs  main.rs  migrations.rs  migrations_barrel.rs
